--- a/dragAndDrop/main.css
+++ b/dragAndDrop/main.css
@@ -3,17 +3,25 @@
 }
 
 .parent {
-  width: 100em;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   border: solid 1px black;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.container {
+  height: 100%;
+  width: 50%;
+  border: solid 1px grey;
+
 }
 
 #draggableSpan {
-  height: 100%;
+  height: 50%;
   width: 100px;
-  background-color: aquamarine;
+  background-color: red;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,8 +29,21 @@
 
 #dropZone {
   height: 100%;
-  width: 100px;
+  width: 200px;
   background-color: blueviolet;
+  float: right;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#dropZone2 {
+  height: 100%;
+  width: 200px;
+  background-color: blueviolet;
+  float: left;
+  flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center;
